# Telegram_News_Bot

./: .env.example  .gitignore  LICENSE  README.md  check_updates.py  pyproject.toml
.github/workflows/: ci.yml  watch.yml
okf/: architecture.md  check_updates.md  groq.md  index.md  manage_sources.md  storage.md  telegram.md
src/news_bot/: __init__.py  check_updates.py  manage_sources.py  storage.py
tests/: test_check_updates.py  test_manage_sources.py  test_storage.py
