[project]
name = "news-bot"
version = "0.1.0"
description = "AI release-notes watcher — monitors official AI product pages hourly and sends Telegram alerts summarized by Groq."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
news-bot = "news_bot.check_updates:main"
manage-sources = "news_bot.manage_sources:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["news_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
